feat : plan service base structure
