# backend/travel_plan/specification/api.yaml
@@ -7,13 +7,13 @@ servers:
   - url: 'http://localhost:8080'
     description: Local Server(개발용)
 tags:
-  - name: travel
+  - name: plan
     description: 여행 계획 관련 API
 paths:
-  /v1/travels:
+  /v1/plans:
     post:
       tags:
-        - travel
+        - plan
       summary: 여행 생성
       description: 여행을 생성합니다.
       requestBody:
@@ -21,21 +21,28 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/TravelPostRequest'
+              $ref: '#/components/schemas/PlanPostRequest'
       responses:
         '201':
           description: 여행 생성 성공
+          headers:
+            ETag:
+              description: 생성된 ETag 값
+              schema:
+                type: string
+                example: "1dsafadsf"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Travel'
+                $ref: '#/components/schemas/Plan'
         '400':
           description: 잘못된 요청
         '500':
           description: 서버 에러
+  /v1/plans/id:
     get:
       tags:
-        - travel
+        - plan
       summary: 자신의 여행 Id 목록 조회
       description: 자신의 여행 Id 목록을 조회합니다.
       responses:
@@ -52,468 +59,107 @@ paths:
           description: 잘못된 요청
         '500':
           description: 서버 에러
-  /v1/travels/{travelId}:
+  /v1/plans/{planId}:
     get:
       tags:
-        - travel
-      summary: 여행 조회
-      description: 여행을 조회합니다.
+        - plan
+      summary: 여행 전체 정보 조회
+      description: 여행의 전체 정보를 한번에 조회합니다.
       parameters:
-        - name: travelId
+        - name: planId
           in: path
           description: 여행 ID
           required: true
           schema:
             type: string
             example: 1
-      responses:
-        '200':
-          description: 여행 조회 성공
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Travel'
-        '400':
-          description: 잘못된 요청
-        '500':
-          description: 서버 에러
-    put:
-      tags:
-        - travel
-      summary: 여행 정보 수정
-      description: 여행 정보를 수정합니다.
-      parameters:
-        - name: travelId
-          in: path
-          description: 여행 ID
-          required: true
-          schema:
-            type: string
-            example: 1
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                title:
-                  type: string
-                  description: 여행 제목
-                  example: 여행 제목
-                startDate:
-                  type: string
-                  format: yyyy-MM-dd
-                  description: 여행 시작 날짜
-                  example: 2021-01-01
-      responses:
-        '200':
-          description: 여행 정보 수정 성공
-        '400':
-          description: 잘못된 요청
-        '500':
-          description: 서버 에러
-  /v1/travels/{travelId}/days:
-    get:
-      tags:
-        - travel
-      summary: 여행 전체 경로 조회
-      description: 여행 전체 경로를 조회합니다.
-      parameters:
-        - name: travelId
-          in: path
-          description: 여행 ID
+        - name: If-None-Match
+          in: header
+          description: 이전에 조회한 ETag 값
           required: false
           schema:
             type: string
             example: "1dsafadsf"
       responses:
         '200':
-          description: 여행 경로 조회 성공
-          content:
-            application/json:
+          description: 여행 조회 성공
+          headers:
+            ETag:
+              description: 조회한 ETag 값
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Day'
-        '400':
-          description: 잘못된 요청
-        '500':
-          description: 서버 에러
-    post:
-      tags:
-        - travel
-      summary: 여행 날짜 추가
-      description: 여행 날짜를 추가합니다.
-      parameters:
-        - name: travelId
-          in: path
-          description: 여행 ID
-          required: true
-          schema:
-            type: string
-            example: "1dsafadsf"
-      requestBody:
-        required: false
-        description: 바디가 없으면, 맨 뒤에 추가
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/DayPostRequest'
-      responses:
-        '201':
-          description: 여행 경로 추가 성공
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Travel'
-        '400':
-          description: 잘못된 요청
-        '500':
-          description: 서버 에러
-    put:
-      tags:
-        - travel
-      summary: 여행 날짜 순서 변경
-      description: 여행 날짜 순서를 변경합니다.
-      parameters:
-        - name: travelId
-          in: path
-          description: 여행 ID
-          required: true
-          schema:
-            type: string
-        - name: dayId
-          in: query
-          description: 변경할 날짜 ID
-          required: true
-          schema:
-            type: string
-            example: "1dsafadsf"
-        - name: cursor
-          in: query
-          description: 어떤 날짜 뒤에 추가할 것인지, NULL일 경우 맨 앞에 추가
-          required: true
-          schema:
-            type: string
-            example: "1dsafadsf"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                type: object
-                properties:
-                  dayId:
-                    type: string
-                    description: 날짜의 ID
-                    example: saldkfjaslfdkj
-                  waypoints:
-                    type: array
-                    items:
-                      type: string
-                      description: placeId
-                      example: asdlfjasd21kfasjdl
-              example: [{"dayId": "1", "waypoints": ["1", "2"]}, {"dayId": "2", "waypoints": ["3", "4"]}]
-      responses:
-        '200':
-          description: 여행 날짜 순서 변경 성공
-        '400':
-          description: 잘못된 요청
-        '500':
-          description: 서버 에러
-  /v1/travels/{travelId}/days/{dayId}:
-    get:
-      tags:
-        - travel
-      summary: 특정 날짜의 경로 조회
-      description: 특정 날짜의 경로를 조회합니다.
-      parameters:
-        - name: travelId
-          in: path
-          description: 여행 ID
-          required: true
-          schema:
-            type: string
-            example: 1
-        - name: dayId
-          in: path
-          description: 여행 일자 ID
-          required: true
-          schema:
-            type: string
-            example: 1
-      responses:
-        '200':
-          description: 여행 경로 조회 성공
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Day'
-        '400':
-          description: 잘못된 요청
-        '500':
-          description: 서버 에러
-    delete:
-      tags:
-        - travel
-      summary: 날짜 삭제
-      description: 날짜를 삭제합니다.
-      parameters:
-        - name: travelId
-          in: path
-          description: 여행 ID
-          required: true
-          schema:
-            type: string
-            example: 1
-        - name: dayId
-          in: path
-          description: 여행 일자 ID
-          required: true
-          schema:
-            type: string
-            example: 1
-      responses:
-        '200':
-          description: 날짜 삭제 성공
-        '400':
-          description: 잘못된 요청
-        '500':
-          description: 서버 에러
-  /v1/travels/{travelId}/waypoints:
-    post:
-      tags:
-        - travel
-      summary: 추천 위치에 경유지 추가
-      description: 추천 위치에 경유지를 추가합니다.
-      parameters:
-        - name: travelId
-          in: path
-          description: 여행 ID
-          required: true
-          schema:
-            type: string
-            example: 1
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
                 type: string
                 example: "1dsafadsf"
-      responses:
-        '201':
-          description: 경유지 추가 성공
           content:
             application/json:
               schema:
-                type: array
-                description: 추가된 날짜의 경유지 목록
-                items:
-                  $ref: '#/components/schemas/Travel'
-        '400':
-          description: 잘못된 요청
-        '500':
-          description: 서버 에러
-  /v1/travels/{travelId}/days/{dayId}/waypoints:
-    get:
-      tags:
-        - travel
-      summary: 특정 날짜의 경유지 조회
-      description: 특정 날짜의 경유지를 조회합니다.
-      parameters:
-        - name: travelId
-          in: path
-          description: 여행 ID
-          required: true
-          schema:
-            type: string
-            example: "1dsafadsf"
-        - name: dayId
-          in: path
-          description: 여행 일자 ID
-          required: true
-          schema:
-            type: string
-            example: "1dsafadsf"
-      responses:
-        '200':
-          description: 여행 경로 조회 성공
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Day'
-        '400':
-          description: 잘못된 요청
-        '500':
-          description: 서버 에러
-    post:
-      tags:
-        - travel
-      summary: 경유지 추가
-      description: 경유지를 추가합니다.
-      parameters:
-        - name: travelId
-          in: path
-          description: 여행 ID
-          required: true
-          schema:
-            type: string
-            example: "1dsafadsf"
-        - name: dayId
-          in: path
-          description: 여행 일자 ID
-          required: true
-          schema:
-            type: string
-            example: "1dsafadsf"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/WaypointPostRequest'
-      responses:
-        '201':
-          description: 경유지 추가 성공
-          content:
-            application/json:
-              schema:
-                type: array
-                description: 추가된 날짜의 경유지 목록
-                items:
-                  $ref: '#/components/schemas/Day'
-        '400':
-          description: 잘못된 요청
-        '500':
-          description: 서버 에러
-  /v1/travels/{travelId}/days/{dayId}/waypoints/{waypointId}:
-    get:
-      tags:
-        - travel
-      summary: 경유지 조회
-      description: 경유지를 조회합니다.
-      parameters:
-        - name: travelId
-          in: path
-          description: 여행 ID
-          required: true
-          schema:
-            type: string
-            example: "1dsafadsf"
-        - name: dayId
-          in: path
-          description: 여행 일자 ID
-          required: true
-          schema:
-            type: string
-            example: "1dsafadsf"
-        - name: waypointId
-          in: path
-          description: 경유지 ID
-          required: true
-          schema:
-            type: string
-            example: "1dsafadsf"
-      responses:
-        '200':
-          description: 경유지 조회 성공
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/WayPoint'
+                $ref: '#/components/schemas/Plan'
+        '304':
+          description: IF-NONE-MATCH 와 ETag 값이 일치하는 경우
         '400':
           description: 잘못된 요청
         '500':
           description: 서버 에러
     delete:
       tags:
-        - travel
-      summary: 경유지 삭제
-      description: 경유지를 삭제합니다.
+        - plan
+      summary: 여행 삭제
+      description: 여행을 삭제합니다.
       parameters:
-        - name: travelId
+        - name: planId
           in: path
           description: 여행 ID
           required: true
           schema:
             type: string
-            example: "1dsafadsf"
-        - name: dayId
-          in: path
-          description: 여행 일자 ID
-          required: true
-          schema:
-            type: string
-            example: "1dsafadsf"
-        - name: waypointId
-          in: path
-          description: 경유지 ID
-          required: true
-          schema:
-            type: string
-            example: "1dsafadsf"
+            example: 1
       responses:
         '200':
-          description: 경유지 삭제 성공
+          description: 여행 삭제 성공
         '400':
           description: 잘못된 요청
         '500':
           description: 서버 에러
     put:
       tags:
-        - travel
-      summary: 경유지 정보 변경
-      description: 경유지 정보를 변경합니다.
+        - plan
+      summary: 여행 수정
+      description: 여행을 수정합니다. 컴포넌트가 새롭게 추가되는 경우, id값을 지정하지 않아야하고, id값이 지정되어있는 경우, 해당 id값을 가진 컴포넌트가 수정됩니다. 기존의 컴포넌트를 생략한 경우, 기존의 컴포넌트는 삭제됩니다.
       parameters:
-        - name: travelId
+        - name: planId
           in: path
           description: 여행 ID
           required: true
           schema:
             type: string
-        - name: dayId
-          in: path
-          description: 여행 일자 ID
-          required: true
-          schema:
-            type: string
+            example: 1
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                memo:
-                  type: string
-                  description: 메모
-                  example: "메모"
-                time:
-                  type: string
-                  format: HH:mm
-                  description: 시간
-                  example: "12:00"
+              $ref: '#/components/schemas/PlanPutRequest'
       responses:
         '200':
-          description: 경유지 정보 변경 성공
+          description: 여행 수정 성공
+          headers:
+            ETag:
+              description: 수정된 ETag 값
+              schema:
+                type: string
+                example: "1dsafadsf"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/WayPoint'
+                $ref: '#/components/schemas/Plan'
         '400':
           description: 잘못된 요청
+        '412':
+          description: Plan 내의 version 값이 일치하지 않는 경우
         '500':
           description: 서버 에러
-
 components:
   schemas:
-    TravelPostRequest:
+    PlanPostRequest:
       type: object
       properties:
         title:
@@ -527,12 +173,14 @@ components:
           type: integer
           required: true
           description: 여행 일수
+          minimum: 1
+          maximum: 30
           example: 3
         startDate:
           type: string
           format: yyyy-MM-dd
           required: false
-          description: 여행 시작 날짜
+          description: 여행 시작 날짜, 오늘이거나 미래
           example: 2021-01-01
         places:
           required: false
@@ -541,51 +189,28 @@ components:
           items:
             type: string
             example: "1dsafadsf"
-    WaypointPostRequest:
+    PlanPutRequest:
       type: object
-      description: 특정 날짜에 경유지를 추가할 때 사용하는 요청
       properties:
-        places:
-          type: array
-          description: 장소 ID 목록
-          items:
-            type: string
-            example: "1dsafadsf"
-        cursor:
+        title:
           type: string
-          required: true
-          nullable: true
-          description: 어떤 여행지 뒤에 추가할 것인지, NULL일 경우 맨 앞에 추가
-          example: "1dsafadsf"
-    DayPostRequest:
-      type: object
-      properties:
-        cursor:
+          description: 여행 제목
+          example: 여행 제목
+        startDate:
           type: string
-          required: false
-          nullable: true
-          description: 어떤 날짜 뒤에 추가할 것인지, NULL일 경우 맨 앞에 추가
-          example: "1dsafadsf"
-    RouteOrderUpdateRequest:
-      type: array
-      items:
-        type: object
-        properties:
-          dayId:
-            type: string
-            description: 날짜의 ID
-            example: saldkfjaslfdkj
-          waypoints:
-            type: array
-            items:
-              type: string
-              description: placeId
-              example: asdlfjasd21kfasjdl
-
-    Travel:
+          format: yyyy-MM-dd
+          description: 여행 시작 날짜
+          example: 2021-01-01
+        version:
+          type: string
+          description: 수정 버전 식별자
+          example: adflasjdflkajsdf
+        route:
+          $ref: '#/components/schemas/Route'
+    Plan:
       type: object
       properties:
-        travelId:
+        planId:
           type: string
           description: 여행 ID
           example: 1
@@ -598,28 +223,50 @@ components:
           format: yyyy-MM-dd
           description: 여행 시작 날짜
           example: 2021-01-01
-        days:
-          type: array
-          description: 여행 경로
-          items:
-            $ref: '#/components/schemas/Day'
+        createdAt:
+          type: string
+          format: yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
+          description: 여행 생성 시간
+          example: 2021-01-01T12:00:00.000Z
+        updatedAt:
+          type: string
+          format: yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
+          description: 여행 변경 시간
+          example: 2021-01-01T12:00:00.000Z
+        version:
+          type: string
+          description: 수정 버전 식별자
+          example: adflasjdflkajsdf
+        route:
+          $ref: '#/components/schemas/Route'
+    Route:
+      type: array
+      description: 여행 경로
+      items:
+        oneOf:
+          - $ref: '#/components/schemas/Day'
+          - $ref: '#/components/schemas/WayPoint'
     Day:
       type: object
       properties:
         dayId:
           type: string
-          description: 여행 일자 ID
+          description: 여행 일자 ID, 없으면 새로 생성하라는 의미
           example: iafi3j2
         wayPoints:
           type: array
           items:
             $ref: '#/components/schemas/WayPoint'
+        _type:
+          type: string
+          description: 컴포넌트 타입
+          example: DAY
     WayPoint:
       type: object
       properties:
         waypointId:
           type: string
-          description: 경유지
+          description: 경유지 ID, 없으면 새로 생성하라는 의미
           example: a1b2c3d4
         placeId:
           type: string
@@ -634,3 +281,7 @@ components:
           format: HH:mm
           description: 시간
           example: 12:00
+        _type:
+          type: string
+          description: 컴포넌트 타입
+          example: WAYPOINT
