# backend/travel_plan/travel_plan_service/src/main/java/click/porito/travel_plan_service/domain/RouteComponent.java
@@ -1,0 +1,4 @@
+package click.porito.travel_plan_service.domain;
+
+public sealed interface RouteComponent permits WayPoint, Day{
+}
