# backend/travel_plan/travel_plan_service/src/main/java/click/porito/travel_plan_service/dto/PlanView.java
@@ -1,0 +1,15 @@
+package click.porito.travel_plan_service.dto;
+
+import java.time.Instant;
+import java.time.LocalDate;
+
+public record PlanView(
+        String planId,
+        String title,
+        LocalDate startDate,
+        Instant createdAt,
+        Instant updatedAt,
+        String version,
+        RouteComponentView[] route
+) {
+}
