# backend/travel_plan/travel_plan_service/src/main/java/click/porito/travel_plan_service/travel/dto/Plan.java
@@ -1,10 +1,0 @@
-package click.porito.travel_plan_service.travel.dto;
-
-import java.util.List;
-
-public class Plan {
-    private List<String> memberIds;
-    private String title;
-    private List<DayPlan> dayPlans;
-
-}
