# backend/travel_plan/travel_plan_service/src/main/java/click/porito/travel_plan_service/travel/dto/TravelView.java
@@ -1,15 +1,0 @@
-package click.porito.travel_plan_service.travel.dto;
-
-import java.time.Instant;
-
-public record TravelView(
-        TravelMetadata metadata,
-        Plan plan
-){
-    public record TravelMetadata(
-            long id,
-            Instant createdAt,
-            Instant updatedAt,
-            String ownerId
-    ){}
-}
